objects/ESC_Segment_Region_BH_Selector_Field__mdt.object
<CustomObject>
    <description>This custom metadata will hold the fields dynamically based on the segment,region,Origin and source(ESC_Origin_name).</description>
    <fields>
        <fullName>ESC_Case_Field1__c</fullName>
        <description>This will hold the Case Field Value</description>
        <inlineHelpText>this will hold the case field value</inlineHelpText>
        <label>Case Field1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ESC_Case_Field2__c</fullName>
        <description>This will hold the Case Field value</description>
        <inlineHelpText>This will hold the case field value</inlineHelpText>
        <label>Case Field2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ESC_Case_Field3__c</fullName>
        <description>This will hold the case field value</description>
        <inlineHelpText>this will hold the case field value</inlineHelpText>
        <label>Case Field3</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ESC_Is_Inactive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Inactive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ESC_Origin__c</fullName>
        <label>Origin</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ESC_Region__c</fullName>
        <label>Region</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ESC_Segment__c</fullName>
        <label>Segment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ESC_Source__c</fullName>
        <label>Unique Identifier</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ESC_TimeZone__c</fullName>
        <label>TimeZone</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>User</fullName>
                    <default>true</default>
                    <label>User</label>
                </value>
                <value>
                    <fullName>Owner</fullName>
                </value>
                <value>
                    <fullName>Creator</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>ESC Segment Region BH Selector Field</label>
    <listViews>
        <fullName>Businesshours</fullName>
        <columns>MasterLabel</columns>
        <columns>DeveloperName</columns>
        <columns>ESC_Case_Field1__c</columns>
        <columns>ESC_Origin__c</columns>
        <columns>ESC_Region__c</columns>
        <columns>ESC_Segment__c</columns>
        <columns>ESC_Source__c</columns>
        <columns>ESC_TimeZone__c</columns>
        <columns>ESC_Case_Field2__c</columns>
        <columns>ESC_Case_Field3__c</columns>
        <columns>ESC_Case_Field4__c</columns>
        <columns>ESC_Case_Field5__c</columns>
        <columns>ESC_Is_Inactive__c</columns>
        <filterScope>Everything</filterScope>
        <label>Businesshours</label>
        <language>en_US</language>
    </listViews>
    <pluralLabel>ESC Segment Region BH Selector Fields</pluralLabel>
    <validationRules>
        <fullName>ESC_ValRule1</fullName>
        <active>false</active>
        <description>Either Timezone or Casefield1/2/3/4/5 has to be entered on the metadata record to save it.</description>
        <errorConditionFormula>(NOT(ISNULL(ESC_Case_Field1__c)) || NOT(ISNULL(ESC_Case_Field2__c)) || NOT(ISNULL(ESC_Case_Field3__c)) || NOT(ISNULL(ESC_Case_Field4__c)) || NOT(ISNULL(ESC_Case_Field5__c))
) &amp;&amp; NOT(ISNULL(Text(ESC_TimeZone__c)))</errorConditionFormula>
        <errorDisplayField>ESC_TimeZone__c</errorDisplayField>
        <errorMessage>You cannot have timezone and Casefields listed on it together!</errorMessage>
    </validationRules>
</CustomObject>